# v-hacd

./: .gitignore  Overview.md  ProjectHome.md  README.md  package.json
DebugView/: DisplayURDF.cpp  DisplayURDF.h  FastXml.cpp  FastXml.h  ImportDAE.cpp  ImportDAE.h  ImportSTL.cpp  ImportSTL.h  ImportURDF.cpp  ImportURDF.h  InspectXml.cpp  InspectXml.h  MeshBuilder.cpp  MeshBuilder.h  MeshFactory.cpp  MeshFactory.h  StringHelper.cpp  StringHelper.h  TestHACD.cpp  TestHACD.h  TestRaycast.cpp  URDF_DOM.h  VoxelizeMesh.cpp  VoxelizeMesh.h  get_physxframework.bat  main.cpp  readme.txt  wavefront.cpp  wavefront.h
DebugView/NvRenderDebug/: NvRenderDebug.h  NvRenderDebugBinding.cpp
DebugView/PhysXFramework/: NvPhysXFramework.h
DebugView/PhysicsDOM/: NvPhysicsDOM.h  NvPhysicsDOMBinding.cpp  PhysicsDOM.h  PhysicsDOMDef.h  PhysicsDOMHelper.h  PhysicsDOMInterface.h
DebugView/PhysicsDOM/nvmath/: Nv.h  NvBounds3.h  NvMat33.h  NvMat44.h  NvMath.h  NvPlane.h  NvQuat.h  NvTransform.h  NvVec2.h  NvVec3.h  NvVec4.h
DebugView/SkeletonRig/: SkeletonRig.h  SkeletonRigBinding.cpp
DebugView/compiler/vc14win32/: ConvexDecomposition.sln  ConvexDecomposition.vcxproj  ConvexDecomposition.vcxproj.filters
DebugView/compiler/vc14win64/: ConvexDecomposition.vcxproj  ConvexDecomposition.vcxproj.filters
DebugView/compiler/xpj/: ConvexDecomposition.xpj  create_projects.cmd
add-ons/blender/: object_vhacd.py
app/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  FloatMath.h  FloatMath.inl  InParser.cpp  InParser.h  SaveUSDA.cpp  SaveUSDA.h  ScopedTime.h  TestVHACD.cpp  TestVHACD.sln  TestVHACD.vcxproj  TestVHACD.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  build_win.bat  wavefront.cpp  wavefront.h
app/compiler/vc14win64/: TestVHACD.sln  TestVHACD.vcxproj  TestVHACD.vcxproj.filters
app/compiler/xpj/: TestVHACD.xpj  create_projects.cmd
bin-no-ocl-omp/osx/: testVHACD
bin-no-ocl/osx/: testVHACD
cpp/: build.sh  vhacd.cpp  vhacd.js  vhacd.wasm
data/: Hand1.off  Sketched-Brunnen.off  block.off  broken.off  bunny.off  camel.off  casting.off  crank.off  cup.off  dino.off  egea.off  elk.off  foot.off  genus3.off  hand2.off  homer.off  hornbug.off  mannequin-devil.off  mannequin.off  moaimoai.off  monk.off  pig.off  pinocchio_b.off  polygirl.off  rocker-arm.off  runme.bat  squirrel.off  table.off  test.off  venus.off
data/res/CRATERS_F.off_folder/: log.txt
data/res/DRAGON_F.off_folder/: DRAGON_F.off  DRAGON_F_VHACD.wrl  DRAGON_F_VHACD_CHs.wrl  DRAGON_F_decimated.off  log.txt
data/res/Hand1.off_folder/: Hand1_VHACD.wrl  Hand1_VHACD_CHs.wrl  Hand1_decimated.off  log.txt
data/res/Sketched-Brunnen.off_folder/: Sketched-Brunnen_VHACD.wrl  Sketched-Brunnen_VHACD_CHs.wrl  Sketched-Brunnen_decimated.off  log.txt
data/res/Teapot.off_folder/: Teapot.off  Teapot_VHACD.wrl  Teapot_VHACD_CHs.wrl  Teapot_decimated.off  log.txt
data/res/block.off_folder/: block_VHACD.wrl  block_VHACD_CHs.wrl  block_decimated.off  log.txt
data/res/bunny.off_folder/: bunny.off  bunny_VHACD.wrl  bunny_VHACD_CHs.wrl  bunny_decimated.off  log.txt
data/res/camel.off_folder/: camel_VHACD.wrl  camel_VHACD_CHs.wrl  camel_decimated.off  log.txt
data/res/casting.off_folder/: casting_VHACD.wrl  casting_VHACD_CHs.wrl  casting_decimated.off  log.txt
data/res/chair.off_folder/: chair.off  chair_VHACD.wrl  chair_VHACD_CHs.wrl  log.txt
data/res/cow1.off_folder/: cow1.off  cow1_VHACD.wrl  cow1_VHACD_CHs.wrl  cow1_decimated.off  log.txt
data/res/cow2.off_folder/: cow2.off  cow2_VHACD.wrl  cow2_VHACD_CHs.wrl  cow2_decimated.off  log.txt
data/res/crank.off_folder/: crank_VHACD.wrl  crank_VHACD_CHs.wrl  crank_decimated.off  log.txt
data/res/cup.off_folder/: cup_VHACD.wrl  cup_VHACD_CHs.wrl  cup_decimated.off  log.txt
data/res/dancer2.off_folder/: dancer2_VHACD.wrl  dancer2_VHACD_CHs.wrl  dancer2_decimated.off  log.txt
data/res/deer_bound.off_folder/: deer_bound.off  deer_bound_VHACD.wrl  deer_bound_VHACD_CHs.wrl  deer_bound_decimated.off  log.txt
data/res/dilo.off_folder/: dilo.off  dilo_VHACD.wrl  dilo_VHACD_CHs.wrl  dilo_decimated.off  log.txt
data/res/dino.off_folder/: dino_VHACD.wrl  dino_VHACD_CHs.wrl  dino_decimated.off  log.txt
data/res/drum.off_folder/: drum.off  drum_VHACD.wrl  drum_VHACD_CHs.wrl  drum_decimated.off  log.txt
data/res/egea.off_folder/: egea_VHACD.wrl  egea_VHACD_CHs.wrl  egea_decimated.off  log.txt
data/res/eight.off_folder/: eight_VHACD.wrl  eight_VHACD_CHs.wrl  eight_decimated.off  log.txt
data/res/elephant.off_folder/: elephant_VHACD.wrl  elephant_VHACD_CHs.wrl  elephant_decimated.off  log.txt
data/res/elk.off_folder/: elk_VHACD.wrl  elk_VHACD_CHs.wrl  elk_decimated.off  log.txt
data/res/face-YH.off_folder/: face-YH.off  log.txt  (+3 more)
include/: VHACD.h
install/: run.py
lib/: vhacd-wasm.js
scripts/: cmake_common.cmake
src/: CMakeLists.txt  VHACD.cpp
src/VHACD_Lib/: CMakeLists.txt
src/VHACD_Lib/cl/: vhacdKernels.cl  vhacdKernels_.cl
src/VHACD_Lib/cmake/: VHACD_LIB-config.cmake
src/VHACD_Lib/inc/: FloatMath.h  MergeHulls.h  RaycastMesh.h  SimpleJobSystem.h  aabb.h  aabbtree.h  btAlignedAllocator.h  btAlignedObjectArray.h  btConvexHullComputer.h  btMinMax.h  btScalar.h  btVector3.h  kdtree.h  triangle.h  vhacdCircularList.h  vhacdCircularList.inl  vhacdGraph.h  vhacdHACD.h  vhacdICHull.h  vhacdManifoldMesh.h  vhacdMaterial.h  vhacdMesh.h  vhacdMeshDecimator.h  vhacdMutex.h  vhacdNearestPoint.h  vhacdRaycastMesh.h  vhacdSArray.h  vhacdTimer.h  vhacdVHACD.h  vhacdVector.h  vhacdVector.inl  vhacdVersion.h  vhacdVolume.h
src/VHACD_Lib/public/: VHACD.h  vhacdVolume.h
src/VHACD_Lib/src/: FloatMath.inl  MergeHulls.cpp  RaycastMesh.cpp  SimpleJobSystem.cpp  VHACD-ASYNC.cpp  VHACD.cpp  aabb.cpp  aabbtree.cpp  btAlignedAllocator.cpp  btConvexHullComputer.cpp  triangle.c  vhacdGraph.cpp  vhacdHACD.cpp  vhacdICHull.cpp  vhacdManifoldMesh.cpp  vhacdMesh.cpp  vhacdMeshDecimator.cpp  vhacdNearestPoint.cpp  vhacdRaycastMesh.cpp  vhacdVolume.cpp
src/test/: CMakeLists.txt
src/test/inc/: oclHelper.h
src/test/src/: main.cpp  oclHelper.cpp
(+164 files in other folders)
